Fixed alignment of header/footer content

--- a/Star Wars Fans United/styles/index.css
+++ b/Star Wars Fans United/styles/index.css
@@ -62,6 +62,7 @@ a {
     column-gap: 0.33%;
     column-width: 33%;
     justify-items: center;
+    align-items: center;
 }
 
 .logo {
